# tvc-zones-prover-poc

./: .gitignore  Cargo.toml  Makefile  README.md  demo.md  rust-toolchain.toml
.github/actions/docker-setup/: action.yml
.github/workflows/: main.yml  stagex.yml
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: helloworld.rs  zones_prover.rs
crates/helloworld/: Cargo.toml
crates/helloworld/src/: cli.rs  client.rs  lib.rs  main.rs  router.rs  state.rs  zone_prover.rs
crates/helloworld/src/handlers/: basic.rs  btc.rs  keys.rs  mod.rs  prove.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: handler.rs  layer.rs  lib.rs
crates/tempo_zone_stubs/: Cargo.toml
crates/tempo_zone_stubs/src/: lib.rs
crates/tempo_zones_stubs/: Cargo.toml
crates/tempo_zones_stubs/src/: fixtures.rs  prover.rs
crates/tvc_utils/: Cargo.toml
crates/tvc_utils/src/: fake_manifest.rs  lib.rs  mock_nsm.rs
crates/tvc_zones_cli/: Cargo.toml
crates/tvc_zones_cli/src/: attest.rs  main.rs  onchain.rs  sequencer.rs
crates/zones_prover/: Cargo.toml
crates/zones_prover/src/: cli.rs  lib.rs  main.rs  response.rs  router.rs  state.rs
crates/zones_prover/src/handlers/: basic.rs  identity.rs  mod.rs  prove.rs
images/helloworld/: Containerfile
images/zones_prover/: Containerfile
