[package]
name = "e2e"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
assert_cmd = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
qos_hex = { workspace = true }
qos_p256 = { workspace = true }
tempfile = { workspace = true }
