[package]
name = "metrics"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prometheus = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
tower = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
