[package]
name = "tvc_utils"
description = "Dev/test utilities for the TVC zones prover PoC (mock NSM, fake manifest generation); not part of the core app logic"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
aws-nitro-enclaves-cose = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true }
clap = { version = "4", features = ["derive"] }
p384 = { workspace = true }
qos_core = { workspace = true }
qos_json = { workspace = true }
qos_nsm = { workspace = true }
qos_p256 = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde_json = { workspace = true }
