[package]
name = "zones_prover"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tempo-zones-stubs = { workspace = true }
# Dev/test utilities: only used behind the --mock-nsm code path.
tvc_utils = { workspace = true }
sha2 = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { workspace = true, features = ["http1", "tokio", "json", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
metrics = { path = "../metrics" }
qos_core = { workspace = true }
qos_hex = { workspace = true, features = ["serde"] }
qos_json = { workspace = true }
qos_nsm = { workspace = true }
qos_p256 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
tempo-zones-stubs = { workspace = true, features = ["fixtures"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
